--- a/app/src/main/res/layout/fragment_assistant_point.xml
+++ b/app/src/main/res/layout/fragment_assistant_point.xml
@@ -401,6 +401,7 @@
                             android:layout_marginHorizontal="20dp"
                             android:background="@color/white"
                             android:hint="Montant"
+                            style="@style/inputFont"
                             android:inputType="number"
                             android:paddingStart="30dp"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -450,6 +451,7 @@
                             android:layout_marginHorizontal="20dp"
                             android:background="@color/white"
                             android:hint="Montant"
+                            style="@style/inputFont"
                             android:inputType="number"
                             android:paddingStart="30dp"
                             app:layout_constraintBottom_toBottomOf="parent"
