--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -87,6 +87,13 @@
                 android:textColor="@color/white"
                 android:textStyle="bold" />
 
+            <ProgressBar
+                android:id="@+id/progressBarLogin"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
