--- a/app/src/main/res/layout/fragment_assistant_settings.xml
+++ b/app/src/main/res/layout/fragment_assistant_settings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
@@ -230,13 +231,14 @@
                 android:backgroundTint="@color/white"
                 android:text="@string/settings_page_logout"
                 android:textStyle="bold"
+                android:textSize="17sp"
                 android:textColor="@color/color_item_amount"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="80dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginBottom="20dp"
-                app:layout_constraintTop_toBottomOf="@+id/cardSC" />
+                app:layout_constraintTop_toBottomOf="@+id/doubleCompteAssist" />
 
             <TextView
                 android:id="@+id/textView22"
@@ -273,6 +275,16 @@
                     android:textColor="@color/black"
                     android:textStyle="bold" />
             </androidx.cardview.widget.CardView>
+
+            <Switch
+                android:id="@+id/doubleCompteAssist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Activer le double-compte "
+                android:layout_marginTop="25dp"
+                app:layout_constraintStart_toStartOf="@+id/cardSC"
+                app:layout_constraintTop_toBottomOf="@+id/cardSC"
+                tools:ignore="UseSwitchCompatOrMaterialXml" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
