--- a/app/src/main/res/layout/fragment_sms_moov.xml
+++ b/app/src/main/res/layout/fragment_sms_moov.xml
@@ -3,7 +3,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
     android:layout_height="500dp">
 
@@ -21,7 +20,7 @@
         android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Message MTN MONEY"
+        android:text="Message MOOV MONEY"
         android:textSize="18sp"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
