--- a/app/src/main/res/layout/menu_popup_recherche.xml
+++ b/app/src/main/res/layout/menu_popup_recherche.xml
@@ -1,86 +1,160 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:orientation="vertical"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="270dp"
-    android:layout_height="wrap_content"
+    android:layout_height="300dp"
     android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <TextView
+        android:id="@+id/textView28"
+        style="@style/inputFont"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"
+        android:text="RECHERCHER"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/view4"
+        android:layout_width="1dp"
+        android:layout_height="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/linkToSearchNumber"
+        android:layout_width="80dp"
+        android:layout_marginEnd="10dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:backgroundTint="@color/background_color"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="30dp"
-        app:cardCornerRadius="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:text="Rechercher un numéro"
-            android:layout_margin="8dp"
-            android:textSize="16sp"/>
+        app:cardCornerRadius="5dp"
+        app:layout_constraintEnd_toStartOf="@+id/view4"
+        app:layout_constraintTop_toBottomOf="@+id/textView28">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/baseline_phone_24"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Numéro"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="10dp"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/linkToSearchDate"
+        android:layout_width="80dp"
+        android:layout_marginStart="10dp"
+        android:layout_height="wrap_content"
         android:backgroundTint="@color/background_color"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="15dp"
-        app:cardCornerRadius="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:text="Rechercher une date"
-            android:layout_margin="8dp"
-            android:textSize="16sp"/>
+        app:cardCornerRadius="5dp"
+        app:layout_constraintStart_toEndOf="@+id/view4"
+        app:layout_constraintTop_toTopOf="@+id/linkToSearchNumber">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="5dp"
+                android:src="@drawable/baseline_date_range_24"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="10dp"
+                android:text="Date"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/linkToSearchMontant"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
         android:backgroundTint="@color/background_color"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="15dp"
-        app:cardCornerRadius="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:text="Rechercher un montant"
-            android:layout_margin="8dp"
-            android:textSize="16sp"/>
+        app:cardCornerRadius="5dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintEnd_toStartOf="@+id/view4"
+        app:layout_constraintTop_toBottomOf="@+id/linkToSearchNumber">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/baseline_money_24"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="10dp"
+                android:text="Montant"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/linkToSearchAdvance"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
         android:backgroundTint="@color/background_color"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="30dp"
-        app:cardCornerRadius="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:text="Rechercher avancée"
-            android:layout_margin="8dp"
-            android:textSize="16sp"/>
+        app:cardCornerRadius="5dp"
+        android:layout_marginTop="25dp"
+        app:layout_constraintStart_toStartOf="@+id/linkToSearchDate"
+        app:layout_constraintTop_toBottomOf="@+id/linkToSearchDate">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/baseline_location_searching_24"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="10dp"
+                android:text="Avancé"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
