--- a/app/src/main/res/layout/fragment_assistant_settings.xml
+++ b/app/src/main/res/layout/fragment_assistant_settings.xml
@@ -280,7 +280,8 @@
                 android:id="@+id/doubleCompteAssist"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Activer le double-compte "
+                android:text="Double-compte "
+                android:visibility="gone"
                 android:layout_marginTop="25dp"
                 app:layout_constraintStart_toStartOf="@+id/cardSC"
                 app:layout_constraintTop_toBottomOf="@+id/cardSC"
