--- a/app/src/main/res/layout/fragment_superviseur_home.xml
+++ b/app/src/main/res/layout/fragment_superviseur_home.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -30,26 +30,14 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/affiche_delai"
+                <ImageButton
+                    android:id="@+id/menuIconSuperviseur"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    app:cardCornerRadius="20dp"
-                    app:cardElevation="0dp"
-                    android:layout_marginEnd="15dp"
+                    android:layout_margin="10dp"
+                    android:src="@drawable/baseline_menu_24"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <TextView
-                        android:id="@+id/libelle_delai"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="20dp"
-                        android:layout_marginVertical="5dp"
-                        android:textColor="@color/color_item_amount"
-                        android:textStyle="bold" />
-                </androidx.cardview.widget.CardView>
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -62,7 +50,7 @@
                 android:textStyle="bold"
                 style="@style/TitleFont"
                 android:ellipsize="end"
-                android:layout_marginTop="65dp"
+                android:layout_marginTop="75dp"
                 app:layout_constraintStart_toStartOf="@+id/cardView7"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="nom assistant" />
@@ -171,26 +159,17 @@
 
             </androidx.cardview.widget.CardView>
 
-            <ImageButton
-                android:id="@+id/menuIconSuperviseur"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/baseline_menu_24"
-                android:layout_marginTop="20dp"
-                app:layout_constraintEnd_toEndOf="@+id/cardView7"
-                app:layout_constraintTop_toBottomOf="@+id/cardView7" />
-
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView99"
                 app:cardCornerRadius="50dp"
                 app:cardElevation="0dp"
                 android:layout_marginHorizontal="15dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="30dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/menuIconSuperviseur">
+                app:layout_constraintTop_toBottomOf="@+id/cardView7">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
