--- a/app/src/main/res/layout/fragment_superviseur_menu_assist.xml
+++ b/app/src/main/res/layout/fragment_superviseur_menu_assist.xml
@@ -23,7 +23,6 @@
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="20dp"
         app:cardCornerRadius="10dp"
-        app:cardElevation="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/backFromMenuSuperviseur">
@@ -42,7 +41,7 @@
                 android:background="@drawable/button_menu_superviseur"
                 android:drawableEnd="@drawable/baseline_navigate_next_24"
                 android:text="CAPITAL"
-                android:textColor="#FF9800"
+                android:textColor="#FFF"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/view5"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -55,7 +54,7 @@
                 android:background="@drawable/button_menu_superviseur"
                 android:drawableEnd="@drawable/baseline_navigate_next_24"
                 android:text="TRANSACTIONS"
-                android:textColor="#FF9800"
+                android:textColor="#FFF"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/view5"
                 app:layout_constraintTop_toTopOf="@+id/popupCapital" />
@@ -67,8 +66,8 @@
                 android:layout_marginTop="15dp"
                 android:background="@drawable/button_menu_superviseur"
                 android:drawableEnd="@drawable/baseline_navigate_next_24"
-                android:text="CUMULS"
-                android:textColor="#FF9800"
+                android:text="CUMULS TRANSACTIONS"
+                android:textColor="#FFF"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/view5"
@@ -83,7 +82,7 @@
                 android:background="@drawable/button_menu_superviseur"
                 android:drawableEnd="@drawable/baseline_navigate_next_24"
                 android:text="COMPTE ANNEXE"
-                android:textColor="#FF9800"
+                android:textColor="#FFF"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/view5"
