--- a/app/src/main/res/layout/fragment_assistant_home.xml
+++ b/app/src/main/res/layout/fragment_assistant_home.xml
@@ -93,8 +93,9 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/assistant_home_internationLink"
                 android:layout_width="87dp"
+                android:visibility="gone"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
+                android:layout_marginHorizontal="10dp"
                 android:layout_marginVertical="10dp"
                 android:background="@drawable/backgroundmenuhome"
                 android:padding="5dp">
@@ -125,8 +126,10 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/assistant_home_nationLink"
                 android:layout_width="87dp"
+                android:visibility="gone"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="10dp"
                 android:background="@drawable/backgroundmenuhome"
                 android:padding="5dp">
 
@@ -156,9 +159,10 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/assistant_home_comptabiliteLink"
                 android:layout_width="87dp"
+                android:visibility="invisible"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
-                android:layout_marginHorizontal="20dp"
+                android:layout_marginHorizontal="10dp"
                 android:background="@drawable/backgroundmenuhome"
                 android:padding="5dp">
 
