--- a/app/src/main/res/layout/fragment_assistant_operation_orange_compte2.xml
+++ b/app/src/main/res/layout/fragment_assistant_operation_orange_compte2.xml
@@ -31,7 +31,7 @@
                     app:cardElevation="0dp"
                     app:layout_constraintBottom_toBottomOf="@+id/textView2"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/btnCancelOperationOrange">
+                    app:layout_constraintTop_toTopOf="@+id/btnCancelOperationOrange_compte2">
 
                     <ImageView
                         android:layout_width="60dp"
@@ -92,147 +92,196 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/gray_color"
-                        android:text="@string/national_sub_advice"/>
-                    <TextView
-                        android:layout_marginTop="20dp"
-                        android:textSize="15sp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Type d'opération"/>
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:background="@drawable/background_circular"
-                        android:padding="2dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="43dp">
+                        android:text="Veuillez vérifier la transaction"/>
 
-                        <androidx.cardview.widget.CardView
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_marginTop="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/textView4"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
-                            app:cardCornerRadius="50dp"
+                            android:text="Transaction en cours"
                             app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent">
-
-                            <ImageView
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
-                                android:scaleType="centerCrop"
-                                android:padding="5dp"
-                                android:src="@drawable/baseline_list_alt_24"
-                                android:background="@color/background_color"
-                                app:tint="@color/black"/>
-                        </androidx.cardview.widget.CardView>
-
-                        <Spinner
-                            android:id="@+id/type_op_spinner_orange_compte2"
-                            android:layout_width="0dp"
-                            android:layout_height="0dp"
-                            android:background="@color/white"
-                            android:layout_marginHorizontal="20dp"
-                            android:hint="Montant"
-                            android:inputType="number"
-                            android:paddingStart="30dp"
-                            android:text="0"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
+
                     </androidx.constraintlayout.widget.ConstraintLayout>
-                    <TextView
-                        android:layout_marginTop="5dp"
-                        android:textSize="15sp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Téléphone"/>
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:background="@drawable/background_circular"
-                        android:padding="2dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="43dp">
 
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="wrap_content"
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_marginTop="5dp"
+                        android:layout_height="wrap_content">
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:id="@+id/const1"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
-                            app:cardCornerRadius="50dp"
-                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:layout_marginTop="10dp"
+                            app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent">
 
-                            <ImageView
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
-                                android:scaleType="centerCrop"
-                                android:padding="5dp"
-                                android:src="@drawable/baseline_phone_24"
-                                android:background="@color/background_color"
-                                app:tint="@color/black"/>
-                        </androidx.cardview.widget.CardView>
+                            <TextView
+                                android:id="@+id/textView6"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Type Opération"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
 
-                        <EditText
-                            android:id="@+id/tel_input_orange_compte2"
-                            android:layout_width="0dp"
-                            android:layout_height="0dp"
-                            android:background="@color/white"
-                            android:layout_marginHorizontal="20dp"
-                            android:hint="Téléphone"
-                            android:inputType="number"
-                            android:paddingStart="30dp"
-                            style="@style/inputFont"
+                            <TextView
+                                android:id="@+id/operationOrange"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                tools:text="Opération"
+                                android:textStyle="bold"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_marginTop="7dp"
+                            android:id="@+id/const2"
+                            app:layout_constraintTop_toBottomOf="@+id/const1"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <TextView
+                                android:id="@+id/textView7"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Numéro"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <TextView
+                                android:id="@+id/numeroOrange"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                tools:text="0000000000"
+                                android:textStyle="bold"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:id="@+id/const3"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="7dp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/const2">
+
+                            <TextView
+                                android:id="@+id/textView8"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Montant"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <TextView
+                                android:id="@+id/montantOrange"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                tools:text="0"
+                                android:textStyle="bold"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:id="@+id/const4"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="7dp"
+                            android:layout_marginBottom="10dp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/const3">
+
+                            <TextView
+                                android:id="@+id/textView9"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="ID Transaction"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <TextView
+                                android:id="@+id/idTransactionOrange"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textStyle="bold"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                tools:text="0" />
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="7dp"
+                            android:layout_marginBottom="10dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toBottomOf="@+id/const4">
+
+                            <TextView
+                                android:id="@+id/textView10"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Nouveau solde"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <TextView
+                                android:id="@+id/soldeOrange"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textStyle="bold"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                tools:text="0" />
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
                     </androidx.constraintlayout.widget.ConstraintLayout>
-                    <TextView
-                        android:layout_marginTop="5dp"
-                        android:textSize="15sp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Montant"/>
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:background="@drawable/background_circular"
-                        android:padding="2dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="43dp">
 
-                        <androidx.cardview.widget.CardView
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:background="@color/background_color"
+                        android:layout_marginTop="15dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/textView29"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
-                            app:cardCornerRadius="50dp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent">
-
-                            <ImageView
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
-                                android:scaleType="centerCrop"
-                                android:padding="5dp"
-                                android:src="@drawable/baseline_money_24"
-                                android:background="@color/background_color"
-                                app:tint="@color/black"/>
-                        </androidx.cardview.widget.CardView>
-
-                        <EditText
-                            android:id="@+id/montant_input_orange_compte2"
-                            android:layout_width="0dp"
-                            android:layout_height="0dp"
-                            android:background="@color/white"
-                            android:layout_marginHorizontal="20dp"
-                            android:hint="Montant"
-                            android:inputType="number"
-                            android:paddingStart="30dp"
-                            style="@style/inputFont"
-                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:paddingHorizontal="10dp"
+                            android:layout_marginTop="5dp"
+                            android:text="Si vous ne recevez pas le message de la dernière opération, veuillez saisir manuellement la transaction pour l'enregistrer"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
+
+                        <Button
+                            android:id="@+id/openOrangePopup"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="end"
+                            android:backgroundTint="@color/background_color"
+                            android:text="Cliquez ici"
+                            android:textStyle="bold"
+                            android:textColor="#0091FF"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/textView29" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <androidx.constraintlayout.widget.ConstraintLayout
@@ -264,6 +313,7 @@
                         android:layout_height="wrap_content"
                         app:cardCornerRadius="10dp"
                         app:cardElevation="0dp"
+                        android:visibility="gone"
                         android:layout_marginTop="10dp"
                         app:layout_constraintTop_toBottomOf="@+id/checkBoxOrange"
                         tools:layout_editor_absoluteX="15dp">
@@ -330,11 +380,21 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         android:layout_gravity="center"/>
 
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recyclerViewSmsOrange"
+                        android:layout_marginTop="20dp"
+                        tools:listitem="@layout/item_sms_orange"
+                        android:visibility="gone"
+                        tools:itemCount="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="5dp"/>
+
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         <LinearLayout
             android:layout_gravity="center"
