--- a/app/src/main/res/layout/fragment_assistant_search_advanced.xml
+++ b/app/src/main/res/layout/fragment_assistant_search_advanced.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragment_assistant.AdvancedFragment">
+    tools:context=".fragment_assistant.SearchAdvancedFragment">
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_marginHorizontal="10dp"
@@ -65,12 +66,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewSearchAdvanced"
-        android:layout_marginTop="25dp"
-        android:padding="10dp"
-        android:background="@color/gray_color_border"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewSearchAdvanced"
+            android:layout_marginTop="25dp"
+            android:padding="10dp"
+            android:background="@color/gray_color_border"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <ProgressBar
+            android:id="@+id/progressBarSearchAdvanced"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@+id/recyclerViewSearchAdvanced"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/recyclerViewSearchAdvanced" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
