--- a/app/src/main/res/layout/fragment_assistant_search_amount.xml
+++ b/app/src/main/res/layout/fragment_assistant_search_amount.xml
@@ -5,19 +5,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment_assistant.AmountFragment">
+    tools:context=".fragment_assistant.SearchAmountFragment">
 
-    <SearchView
+    <EditText
         android:id="@+id/searchAmount"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="47dp"
         android:layout_margin="15dp"
-        android:queryHint="Rechercher montant"
-        android:inputType="number"
         android:background="@drawable/background_circular"
+        android:hint="Rechercher un montant"
         android:iconifiedByDefault="false"
+        android:inputType="number"
+        android:paddingStart="62dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:layout_width="60dp"
+        android:layout_height="44dp"
+        android:background="@drawable/backgroundallwhite"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_margin="2dp"
+        android:src="@drawable/baseline_search_24"
+        app:layout_constraintBottom_toBottomOf="@+id/searchAmount"
+        app:layout_constraintStart_toStartOf="@+id/searchAmount"
+        app:layout_constraintTop_toTopOf="@+id/searchAmount" />
 
     <TextView
         android:id="@+id/textView14"
@@ -34,9 +47,19 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@color/gray_color_border"
-        android:layout_marginTop="10dp"
         android:padding="10dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
+
+    <ProgressBar
+        android:id="@+id/progressBarSearchAmount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/recyclerSearchMontant" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
