--- a/app/src/main/res/layout/fragment_assistant_search_phone.xml
+++ b/app/src/main/res/layout/fragment_assistant_search_phone.xml
@@ -7,16 +7,31 @@
     android:layout_height="match_parent"
     tools:context=".fragment_assistant.SearchPhoneFragment">
 
-    <SearchView
-        android:id="@+id/searchView"
+    <EditText
+        android:id="@+id/searchPhone"
+        android:layout_width="match_parent"
+        android:layout_height="47dp"
         android:layout_margin="15dp"
         android:background="@drawable/background_circular"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:hint="Rechercher un numéro"
         android:iconifiedByDefault="false"
-        android:inputType="phone"
-        android:queryHint="@string/search_date_phone_placeholder"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:inputType="number"
+        android:paddingStart="62dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="RtlSymmetry,TextFields" />
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:layout_width="60dp"
+        android:layout_height="44dp"
+        android:background="@drawable/backgroundallwhite"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_margin="2dp"
+        android:src="@drawable/baseline_search_24"
+        app:layout_constraintBottom_toBottomOf="@+id/searchPhone"
+        app:layout_constraintStart_toStartOf="@+id/searchPhone"
+        app:layout_constraintTop_toTopOf="@+id/searchPhone" />
 
     <TextView
         android:id="@+id/textView14"
@@ -25,8 +40,8 @@
         android:layout_marginTop="10dp"
         android:text="@string/search_date_phone_list_title"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/searchView"
-        app:layout_constraintTop_toBottomOf="@+id/searchView" />
+        app:layout_constraintStart_toStartOf="@+id/searchPhone"
+        app:layout_constraintTop_toBottomOf="@+id/searchPhone" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewSearch"
@@ -38,5 +53,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
+    <ProgressBar
+        android:id="@+id/progressBarSearchNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewSearch"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/recyclerViewSearch" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
