--- a/app/src/main/res/layout/fragment_assistant_settings.xml
+++ b/app/src/main/res/layout/fragment_assistant_settings.xml
@@ -238,8 +238,75 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="20dp"
-                app:layout_constraintTop_toBottomOf="@+id/doubleCompteAssist" />
+                app:layout_constraintTop_toBottomOf="@+id/cardSC" />
 
+            <TextView
+                android:id="@+id/titleDoubleCompte"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Double compte"
+                android:textColor="#A1A3A3"
+                android:textStyle="bold"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="@+id/textView011"
+                app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardDoubleCompte"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="0dp"
+                android:visibility="gone"
+                android:layout_marginTop="5dp"
+                android:layout_marginHorizontal="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/titleDoubleCompte">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/textView5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:text="Double compte"
+                        android:textSize="12sp"
+                        android:textStyle="bold"
+                        android:layout_marginStart="20dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="20dp"
+                        android:layout_marginHorizontal="20dp"
+                        android:text="@string/info_double_compte"
+                        android:textSize="10dp"
+                        android:textColor="#A1A3A3"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="@+id/textView5"
+                        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+                    <Switch
+                        android:id="@+id/doubleCompteAssist"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"
+                        app:layout_constraintBottom_toBottomOf="@+id/textView5"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/textView5"
+                        tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
             <TextView
                 android:id="@+id/textView22"
                 android:layout_width="wrap_content"
@@ -249,7 +316,7 @@
                 android:textColor="#A1A3A3"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/cardView1"
-                app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+                app:layout_constraintTop_toBottomOf="@+id/cardDoubleCompte" />
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardSC"
@@ -276,16 +343,7 @@
                     android:textStyle="bold" />
             </androidx.cardview.widget.CardView>
 
-            <Switch
-                android:id="@+id/doubleCompteAssist"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Double-compte "
-                android:visibility="gone"
-                android:layout_marginTop="25dp"
-                app:layout_constraintStart_toStartOf="@+id/cardSC"
-                app:layout_constraintTop_toBottomOf="@+id/cardSC"
-                tools:ignore="UseSwitchCompatOrMaterialXml" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
