--- a/app/src/main/res/layout/fragment_facture.xml
+++ b/app/src/main/res/layout/fragment_facture.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/titleFacture"
         style="@style/TitleFont"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,7 +36,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toStartOf="@+id/view6"
-        app:layout_constraintTop_toBottomOf="@+id/textView2">
+        app:layout_constraintTop_toBottomOf="@+id/titleFacture">
 
         <ImageView
             android:layout_width="80dp"
