--- a/app/src/main/res/layout/menu_popup_inter.xml
+++ b/app/src/main/res/layout/menu_popup_inter.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="270dp"
-    android:layout_height="300dp"
+    android:layout_height="wrap_content"
     android:background="@color/white"
     android:padding="5dp">
 
@@ -74,7 +74,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:text="WESTERN UNION"
-                android:textSize="13sp"
+                android:textSize="11sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -116,7 +116,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:text="MONEYGRAM"
-                android:textSize="13sp"
+                android:textSize="11sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -133,6 +133,8 @@
         android:backgroundTint="@color/background_color"
         app:cardCornerRadius="5dp"
         app:cardElevation="0dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/linkTo_western_popup"
         app:layout_constraintTop_toBottomOf="@+id/linkTo_western_popup">
 
@@ -155,11 +157,11 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="RIA"
-                android:textSize="13sp"
-                android:textStyle="bold"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
+                android:text="RIA"
+                android:textSize="11sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
