--- a/app/src/main/res/layout/menu_popup_recherche.xml
+++ b/app/src/main/res/layout/menu_popup_recherche.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="270dp"
-    android:layout_height="300dp"
+    android:layout_height="wrap_content"
     android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:text="RECHERCHER"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -96,23 +96,27 @@
         android:id="@+id/linkToSearchMontant"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/background_color"
-        app:cardCornerRadius="5dp"
         android:layout_marginTop="25dp"
         android:layout_marginEnd="10dp"
+        android:backgroundTint="@color/background_color"
+        app:cardCornerRadius="5dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/view4"
         app:layout_constraintTop_toBottomOf="@+id/linkToSearchNumber">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
             <ImageView
-                android:layout_gravity="center"
-                android:layout_marginTop="5dp"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/baseline_money_24"/>
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:src="@drawable/baseline_money_24" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -129,22 +133,26 @@
         android:id="@+id/linkToSearchAdvance"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
         android:backgroundTint="@color/background_color"
         app:cardCornerRadius="5dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/linkToSearchDate"
         app:layout_constraintTop_toBottomOf="@+id/linkToSearchDate">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
             <ImageView
-                android:layout_gravity="center"
-                android:layout_marginTop="5dp"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/baseline_location_searching_24"/>
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:src="@drawable/baseline_location_searching_24" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
