--- a/app/src/main/res/layout/activity_main_detail_operation.xml
+++ b/app/src/main/res/layout/activity_main_detail_operation.xml
@@ -34,10 +34,11 @@
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/AnnulerDetailTransaction"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
-                    android:text="Annuler"
+                    android:text="X"
+                    android:textAllCaps="false"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/backButtonDetailtransactionVw" />
