--- a/app/src/main/res/layout/fragment_assistant_operation_tresor.xml
+++ b/app/src/main/res/layout/fragment_assistant_operation_tresor.xml
@@ -264,6 +264,7 @@
                         android:layout_height="wrap_content"
                         app:cardCornerRadius="10dp"
                         app:cardElevation="0dp"
+                        android:visibility="gone"
                         android:layout_marginTop="10dp"
                         app:layout_constraintTop_toBottomOf="@+id/checkBoxtresor"
                         tools:layout_editor_absoluteX="15dp">
@@ -376,38 +377,9 @@
                     android:layout_width="45dp"
                     android:layout_height="45dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/mtn" />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="10dp">
-
-                <ImageView
-                    android:id="@+id/assistant_link3_tresor"
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:scaleType="centerCrop"
                     android:src="@drawable/moov" />
             </androidx.cardview.widget.CardView>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="10dp">
-
-                <ImageView
-                    android:id="@+id/assistant_link4_tresor"
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/wave" />
-            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
     </LinearLayout>
